<resources>
    <string name="app_name">PlayTech</string>
    <string name="login_text">Please login with your account</string>
    <string name="register_account_text">Register your account here</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create">Create Account</string>
    <string name="register">Register</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="address">Address</string>
    <string name="email">Email Address</string>
    <string name="contact">Contact</string>
    <string name="save">Save</string>
    <string name="new_pass">New Password</string>
    <string name="new_pass_message">Leave blank if you do not need to change</string>
    <string name="register_text">Already have an account? Login</string>
    <string name="stock">Stock</string>
    <string name="category">Category</string>
    <string name="rates_and_reviews">Ratings and Reviews</string>
    <string name="cart">Cart</string>
    <string name="receive">Receive</string>
    <string name="order_details">Order Details</string>
    <string name="order_history">Order History</string>
    <string name="button_cart">Add To Cart</string>
    <string name="details">Details</string>
    <string name="submit">Submit</string>
    <string name="reviews">Write your reviews here</string>
    <string name="description">Description</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_ratings">Ratings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_history">Orders</string>
    <string name="title_feedback">My Feedback</string>
    <string name="title_cart">Cart</string>
    <string name="title_logout">Logout</string>
    <string name="text_address">Delivery Address</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_cash_on_delivery">Cash on Delivery</string>
    <string name="text_order_summary">Order Summary</string>
    <string name="text_total">Total:</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_order_details">Order Details</string>
    <string name="btnReceive">Receive Order</string>
</resources>
