<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/title"-->
    <!--        android:layout_marginBottom="30dp"-->
    <!--        android:textSize="25sp"-->
    <!--        android:textStyle="bold"-->
    <!--        android:gravity="center"-->
    <!--        android:textColor="@android:color/white"-->
    <!--        />-->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:src="@drawable/logo_playtech"
                android:layout_gravity="center"
                android:layout_marginTop="50dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/login_text"
                            android:textColor="@color/colorText"
                            android:layout_marginTop="20dp"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                app:errorTextAppearance="@style/error_appearance"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:singleLine="true"
                    android:textColor="@color/colorText"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                app:passwordToggleEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textColor="@color/colorText"/>


            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="16dp"
                android:background="@color/colorButtonLogin"
                android:textColor="@android:color/white"
                android:letterSpacing="0.2"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create"
                android:clickable="true"
                android:onClick="register"
                android:textColor="@color/colorTextLight"
                android:layout_marginTop="16dp"
                android:textSize="16sp"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>