<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">


    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@drawable/playtech_bg"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageCover"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="64dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="64dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@mipmap/ic_launcher_round" />

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignBottom="@id/imageCover"
                android:layout_marginLeft="80dp"
                android:background="@color/colorWhite"
                app:cardCornerRadius="64dp">

                <ImageView
                    android:id="@+id/iconEdit"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_file_upload_black_24dp"
                    android:scaleType="centerCrop"
                    android:clickable="true" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_layout"
        android:background="@color/colorPrimary"
        android:gravity="center">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:animateLayoutChanges="true"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etFirstName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:focusable="true"
                        app:errorTextAppearance="@style/error_appearance">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fname"
                            android:singleLine="true"
                            android:textColor="@color/colorText" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etLastName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:focusable="true"
                        app:errorTextAppearance="@style/error_appearance">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lname"
                            android:singleLine="true"
                            android:textColor="@color/colorText" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etAddress"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:focusable="true"
                        app:errorTextAppearance="@style/error_appearance">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:singleLine="true"
                            android:textColor="@color/colorText" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:focusable="true"
                        app:errorTextAppearance="@style/error_appearance">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:singleLine="true"
                            android:textColor="@color/colorText" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etContact"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:focusable="true"
                        app:errorTextAppearance="@style/error_appearance">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contact"
                            android:singleLine="true"
                            android:textColor="@color/colorText" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etUsername"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:focusable="true"
                        app:errorTextAppearance="@style/error_appearance">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:singleLine="true"
                            android:textColor="@color/colorText" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorLightGray"
                        android:textSize="14sp"
                        android:text="@string/new_pass_message"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:focusable="true"
                        app:passwordToggleEnabled="true"
                        app:errorTextAppearance="@style/error_appearance">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/new_pass"
                            android:singleLine="true"
                            android:inputType="textPassword"
                            android:textColor="@color/colorText" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/loading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorButtonLogin"
                        android:text="@string/save"
                        android:textColor="@android:color/white"
                        android:letterSpacing="0.2"
                        android:textSize="18sp" />

                </LinearLayout>

            </ScrollView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>